--- a/nba.html
+++ b/nba.html
@@ -121,123 +121,122 @@
      Upcoming NBA Events
     </h2>
     <table id="eventsTable">
-    </thead>
-    <tbody>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-1">
-        Los Angeles Clippers vs Boston Celtics
-       </a>
-      </td>
-      <td>
-       November 16, 2025 12:30 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 17, 2025 12:30 PM:00" data-start="November 16, 2025 12:30 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-2">
-        Sacramento Kings vs San Antonio Spurs
-       </a>
-      </td>
-      <td>
-       November 16, 2025 1:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 17, 2025 1:00 PM:00" data-start="November 16, 2025 1:00 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-3">
-        Brooklyn Nets vs Washington Wizards
-       </a>
-      </td>
-      <td>
-       November 16, 2025 3:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 17, 2025 3:00 PM:00" data-start="November 16, 2025 3:00 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-4">
-        Orlando Magic vs Houston Rockets
-       </a>
-      </td>
-      <td>
-       November 16, 2025 4:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 17, 2025 4:00 PM:00" data-start="November 16, 2025 4:00 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-5">
-        Golden State Warriors vs New Orleans Pelicans
-       </a>
-      </td>
-      <td>
-       November 16, 2025 4:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 17, 2025 4:00 PM:00" data-start="November 16, 2025 4:00 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-6">
-        Portland Trail Blazers vs Dallas Mavericks
-       </a>
-      </td>
-      <td>
-       November 16, 2025 4:30 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 17, 2025 4:30 PM:00" data-start="November 16, 2025 4:30 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-7">
-        Atlanta Hawks vs Phoenix Suns
-       </a>
-      </td>
-      <td>
-       November 16, 2025 5:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 17, 2025 5:00 PM:00" data-start="November 16, 2025 5:00 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-8">
-        Chicago Bulls vs Utah Jazz
-       </a>
-      </td>
-      <td>
-       November 16, 2025 5:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 17, 2025 5:00 PM:00" data-start="November 16, 2025 5:00 PM:00">
-       </span>
-      </td>
-     </tr>
-    </tbody>
-   </table>
-  </div>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Los Angeles Clippers vs Boston Celtics
+        </a>
+       </td>
+       <td>
+        November 16, 2025 12:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 17, 2025 12:30 PM:00" data-start="November 16, 2025 12:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Sacramento Kings vs San Antonio Spurs
+        </a>
+       </td>
+       <td>
+        November 16, 2025 1:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 17, 2025 1:00 PM:00" data-start="November 16, 2025 1:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Brooklyn Nets vs Washington Wizards
+        </a>
+       </td>
+       <td>
+        November 16, 2025 3:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 17, 2025 3:00 PM:00" data-start="November 16, 2025 3:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Orlando Magic vs Houston Rockets
+        </a>
+       </td>
+       <td>
+        November 16, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 17, 2025 4:00 PM:00" data-start="November 16, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Golden State Warriors vs New Orleans Pelicans
+        </a>
+       </td>
+       <td>
+        November 16, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 17, 2025 4:00 PM:00" data-start="November 16, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         Portland Trail Blazers vs Dallas Mavericks
+        </a>
+       </td>
+       <td>
+        November 16, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 17, 2025 4:30 PM:00" data-start="November 16, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-7">
+         Atlanta Hawks vs Phoenix Suns
+        </a>
+       </td>
+       <td>
+        November 16, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 17, 2025 5:00 PM:00" data-start="November 16, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-8">
+         Chicago Bulls vs Utah Jazz
+        </a>
+       </td>
+       <td>
+        November 16, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 17, 2025 5:00 PM:00" data-start="November 16, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
+   </div>
    <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
     <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
      <li class="nav-item">
@@ -283,5 +282,138 @@
 
         window.onload = startCountdown;
    </script>
+   <h2>
+    NBA Schedule for November 17, 2025
+   </h2>
+   <table id="eventsTable">
+    <thead>
+     <tr>
+      <th>
+       Event
+      </th>
+      <th>
+       Start Time
+      </th>
+      <th>
+       Countdown
+      </th>
+     </tr>
+    </thead>
+    <tbody>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-1">
+        Milwaukee Bucks vs Cleveland Cavaliers
+       </a>
+      </td>
+      <td>
+       November 17, 2025 4:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 18, 2025 4:00 PM:00" data-start="November 17, 2025 4:00 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-2">
+        Indiana Pacers vs Detroit Pistons
+       </a>
+      </td>
+      <td>
+       November 17, 2025 4:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 18, 2025 4:00 PM:00" data-start="November 17, 2025 4:00 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-3">
+        Los Angeles Clippers vs Philadelphia 76ers
+       </a>
+      </td>
+      <td>
+       November 17, 2025 4:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 18, 2025 4:00 PM:00" data-start="November 17, 2025 4:00 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-4">
+        New York Knicks vs Miami Heat
+       </a>
+      </td>
+      <td>
+       November 17, 2025 4:30 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 18, 2025 4:30 PM:00" data-start="November 17, 2025 4:30 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-5">
+        Charlotte Hornets vs Toronto Raptors
+       </a>
+      </td>
+      <td>
+       November 17, 2025 4:30 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 18, 2025 4:30 PM:00" data-start="November 17, 2025 4:30 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-6">
+        Dallas Mavericks vs Minnesota Timberwolves
+       </a>
+      </td>
+      <td>
+       November 17, 2025 5:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 18, 2025 5:00 PM:00" data-start="November 17, 2025 5:00 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-7">
+        Oklahoma City Thunder vs New Orleans Pelicans
+       </a>
+      </td>
+      <td>
+       November 17, 2025 5:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 18, 2025 5:00 PM:00" data-start="November 17, 2025 5:00 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-8">
+        Chicago Bulls vs Denver Nuggets
+       </a>
+      </td>
+      <td>
+       November 17, 2025 6:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 18, 2025 6:00 PM:00" data-start="November 17, 2025 6:00 PM:00">
+       </span>
+      </td>
+     </tr>
+    </tbody>
+   </table>
+  </div>
  </body>
 </html>
