--- a/soccer.html
+++ b/soccer.html
@@ -95,26 +95,19 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Israel vs Moldova</a>
-<td>November 16, 2025 11:45 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Netherlands vs Lithuania</a>
+<td>November 17, 2025 11:45 AM</td>
 <td><span class="countdown-timer" data-end="November 17, 2025 10:45:00" data-start="November 16, 2025 11:45:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Italy vs Norway</a>
-<td>November 16, 2025 11:45 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Germany vs Slovakia</a>
+<td>November 17, 2025 11:45 AM</td>
 <td><span class="countdown-timer" data-end="November 17, 2025 10:45:00" data-start="November 16, 2025 11:45:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Vélez Sarsfield vs River Plate</a>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Malta vs Poland</a>
 <td>November 16, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="November 17, 2025 11:00:00" data-start="November 16, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">RB Bragantino vs Atlético Mineiro</a>
-<td>November 16, 2025 14:00 PM</td>
-<td><span class="countdown-timer" data-end="November 17, 2025 13:00:00" data-start="November 16, 2025 14:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Boca Juniors vs Tigre</a>
-<td>November 16, 2025 15:16 PM</td>
-<td><span class="countdown-timer" data-end="November 17, 2025 14:16:00" data-start="November 16, 2025 15:16:00"></span></td>
-<tr></tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table>
+</tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
