--- a/fighting.html
+++ b/fighting.html
@@ -96,13 +96,9 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/ppv-streams-1">EUBANK JR vs BENN</a></td>
-<td>November 15, 2025 08:30 AM</td>
-<td><span class="countdown-timer" data-end="November 31, 2025 23:59:00" data-start="November 15, 2025 08:30:00"></span></td>
-</tr>
-<td><a href="https://roxiestreams.live/ufc">UFC 322: Della Maddalena vs Makhachev</a></td>
-<td>November 15, 2025 15:00 PM</td>
-<td><span class="countdown-timer" data-end="November 31, 2025 23:59:00" data-start="November 15, 2025 15:00:00"></span></td>
+<td><a href="https://roxiestreams.live/wwe-streams">WWE RAW</a></td>
+<td>November 17, 2025 17:00 PM</td>
+<td><span class="countdown-timer" data-end="November 31, 2025 23:59:00" data-start="November 17, 2025 17:00:00"></span></td>
 </tr>
 </tbody>
 </table>
