--- a/nfl.html
+++ b/nfl.html
@@ -137,183 +137,15 @@
     <tbody>
      <tr>
       <td>
-       <a href="https://roxiestreams.live/redzone">
-        NFL REDZONE
+       <a href="https://roxiestreams.live/nfl-streams-1">
+        Dallas Cowboys vs Las Vegas Raiders
        </a>
       </td>
       <td>
-       November 16, 2025 10:00 AM
+       November 17, 2025 17:00 PM
       </td>
       <td>
-       <span class="countdown-timer" data-end="November 17, 2025 6:30 AM:00" data-start="November 16, 2025 6:30 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-2">
-        Carolina Panthers vs Atlanta Falcons
-       </a>
-      </td>
-      <td>
-       November 16, 2025 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 17, 2025 10:00 AM:00" data-start="November 16, 2025 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-3">
-        Tampa Bay Buccaneers vs Buffalo Bills
-       </a>
-      </td>
-      <td>
-       November 16, 2025 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 17, 2025 10:00 AM:00" data-start="November 16, 2025 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-4">
-        Houston Texans vs Tennessee Titans
-       </a>
-      </td>
-      <td>
-       November 16, 2025 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 17, 2025 10:00 AM:00" data-start="November 16, 2025 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-5">
-        Chicago Bears vs Minnesota Vikings
-       </a>
-      </td>
-      <td>
-       November 16, 2025 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 17, 2025 10:00 AM:00" data-start="November 16, 2025 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-6">
-        Green Bay Packers vs New York Giants
-       </a>
-      </td>
-      <td>
-       November 16, 2025 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 17, 2025 10:00 AM:00" data-start="November 16, 2025 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-7">
-        Cincinnati Bengals vs Pittsburgh Steelers
-       </a>
-      </td>
-      <td>
-       November 16, 2025 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 17, 2025 10:00 AM:00" data-start="November 16, 2025 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-8">
-        Los Angeles Chargers vs Jacksonville Jaguars
-       </a>
-      </td>
-      <td>
-       November 16, 2025 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 17, 2025 10:00 AM:00" data-start="November 16, 2025 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-9">
-        Seattle Seahawks vs Los Angeles Rams
-       </a>
-      </td>
-      <td>
-       November 16, 2025 1:05 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 17, 2025 1:05 PM:00" data-start="November 16, 2025 1:05 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-10">
-        San Francisco 49ers vs Arizona Cardinals
-       </a>
-      </td>
-      <td>
-       November 16, 2025 1:05 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 17, 2025 1:05 PM:00" data-start="November 16, 2025 1:05 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-11">
-        Baltimore Ravens vs Cleveland Browns
-       </a>
-      </td>
-      <td>
-       November 16, 2025 1:25 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 17, 2025 1:25 PM:00" data-start="November 16, 2025 1:25 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-12">
-        Kansas City Chiefs vs Denver Broncos
-       </a>
-      </td>
-      <td>
-       November 16, 2025 1:25 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 17, 2025 1:25 PM:00" data-start="November 16, 2025 1:25 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-13">
-        Detroit Lions vs Philadelphia Eagles
-       </a>
-      </td>
-      <td>
-       November 16, 2025 5:20 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 17, 2025 5:20 PM:00" data-start="November 16, 2025 5:20 PM:00">
+       <span class="countdown-timer" data-end="November 31, 2025 6:30 AM:00" data-start="November 17, 2025 5:00 PM:00">
        </span>
       </td>
      </tr>
