--- a/soccer.html
+++ b/soccer.html
@@ -97,17 +97,17 @@
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-1">Netherlands vs Lithuania</a>
 <td>November 17, 2025 11:45 AM</td>
-<td><span class="countdown-timer" data-end="November 17, 2025 10:45:00" data-start="November 16, 2025 11:45:00"></span></td>
+<td><span class="countdown-timer" data-end="November 18, 2025 10:45:00" data-start="November 17, 2025 11:45:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-2">Germany vs Slovakia</a>
 <td>November 17, 2025 11:45 AM</td>
-<td><span class="countdown-timer" data-end="November 17, 2025 10:45:00" data-start="November 16, 2025 11:45:00"></span></td>
+<td><span class="countdown-timer" data-end="November 18, 2025 10:45:00" data-start="November 17, 2025 11:45:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-3">Malta vs Poland</a>
-<td>November 16, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="November 17, 2025 11:00:00" data-start="November 16, 2025 12:00:00"></span></td>
+<td>November 17, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="November 18, 2025 11:00:00" data-start="November 17, 2025 12:00:00"></span></td>
 <tr>
-</tbody></table>
+</tr></td></tr></td></tr></td></tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
