--- a/nba.html
+++ b/nba.html
@@ -121,150 +121,254 @@
      Upcoming Soccer Events
     </h2>
     <table id="eventsTable">
-    <thead>
-     <tr>
-      <th>
-       Event
-      </th>
-      <th>
-       Start Time
-      </th>
-      <th>
-       Countdown
-      </th>
-     </tr>
-    </thead>
-    <tbody>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-1">
-        Milwaukee Bucks vs Cleveland Cavaliers
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Milwaukee Bucks vs Cleveland Cavaliers
+        </a>
+       </td>
+       <td>
+        November 17, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 18, 2025 4:00 PM:00" data-start="November 17, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Indiana Pacers vs Detroit Pistons
+        </a>
+       </td>
+       <td>
+        November 17, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 18, 2025 4:00 PM:00" data-start="November 17, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Los Angeles Clippers vs Philadelphia 76ers
+        </a>
+       </td>
+       <td>
+        November 17, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 18, 2025 4:00 PM:00" data-start="November 17, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         New York Knicks vs Miami Heat
+        </a>
+       </td>
+       <td>
+        November 17, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 18, 2025 4:30 PM:00" data-start="November 17, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Charlotte Hornets vs Toronto Raptors
+        </a>
+       </td>
+       <td>
+        November 17, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 18, 2025 4:30 PM:00" data-start="November 17, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         Dallas Mavericks vs Minnesota Timberwolves
+        </a>
+       </td>
+       <td>
+        November 17, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 18, 2025 5:00 PM:00" data-start="November 17, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-7">
+         Oklahoma City Thunder vs New Orleans Pelicans
+        </a>
+       </td>
+       <td>
+        November 17, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 18, 2025 5:00 PM:00" data-start="November 17, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-8">
+         Chicago Bulls vs Denver Nuggets
+        </a>
+       </td>
+       <td>
+        November 17, 2025 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 18, 2025 6:00 PM:00" data-start="November 17, 2025 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
+    <h2>
+     NBA Schedule for November 18, 2025
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Golden State Warriors vs Orlando Magic
+        </a>
+       </td>
+       <td>
+        November 18, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 19, 2025 4:00 PM:00" data-start="November 18, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Boston Celtics vs Brooklyn Nets
+        </a>
+       </td>
+       <td>
+        November 18, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 19, 2025 4:30 PM:00" data-start="November 18, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Detroit Pistons vs Atlanta Hawks
+        </a>
+       </td>
+       <td>
+        November 18, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 19, 2025 4:30 PM:00" data-start="November 18, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Memphis Grizzlies vs San Antonio Spurs
+        </a>
+       </td>
+       <td>
+        November 18, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 19, 2025 5:00 PM:00" data-start="November 18, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Utah Jazz vs Los Angeles Lakers
+        </a>
+       </td>
+       <td>
+        November 18, 2025 7:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 19, 2025 7:30 PM:00" data-start="November 18, 2025 7:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         Phoenix Suns vs Portland Trail Blazers
+        </a>
+       </td>
+       <td>
+        November 18, 2025 8:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 19, 2025 8:00 PM:00" data-start="November 18, 2025 8:00 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
+    <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
+     <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
+      <li class="nav-item">
+       <a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">
+        Stream Request (Discord)
        </a>
-      </td>
-      <td>
-       November 17, 2025 4:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 18, 2025 4:00 PM:00" data-start="November 17, 2025 4:00 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-2">
-        Indiana Pacers vs Detroit Pistons
-       </a>
-      </td>
-      <td>
-       November 17, 2025 4:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 18, 2025 4:00 PM:00" data-start="November 17, 2025 4:00 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-3">
-        Los Angeles Clippers vs Philadelphia 76ers
-       </a>
-      </td>
-      <td>
-       November 17, 2025 4:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 18, 2025 4:00 PM:00" data-start="November 17, 2025 4:00 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-4">
-        New York Knicks vs Miami Heat
-       </a>
-      </td>
-      <td>
-       November 17, 2025 4:30 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 18, 2025 4:30 PM:00" data-start="November 17, 2025 4:30 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-5">
-        Charlotte Hornets vs Toronto Raptors
-       </a>
-      </td>
-      <td>
-       November 17, 2025 4:30 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 18, 2025 4:30 PM:00" data-start="November 17, 2025 4:30 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-6">
-        Dallas Mavericks vs Minnesota Timberwolves
-       </a>
-      </td>
-      <td>
-       November 17, 2025 5:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 18, 2025 5:00 PM:00" data-start="November 17, 2025 5:00 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-7">
-        Oklahoma City Thunder vs New Orleans Pelicans
-       </a>
-      </td>
-      <td>
-       November 17, 2025 5:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 18, 2025 5:00 PM:00" data-start="November 17, 2025 5:00 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-8">
-        Chicago Bulls vs Denver Nuggets
-       </a>
-      </td>
-      <td>
-       November 17, 2025 6:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 18, 2025 6:00 PM:00" data-start="November 17, 2025 6:00 PM:00">
-       </span>
-      </td>
-     </tr>
-    </tbody>
-   </table>
-   <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
-    <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
-     <li class="nav-item">
-      <a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">
-       Stream Request (Discord)
-      </a>
-     </li>
-    </ul>
-    <p class="mb-0 text-body-secondary text-center text-lg-start">
-     Roxiestreams © 2024
-    </p>
-   </footer>
-   <script src="js/bootstrap.bundle.min.js">
-   </script>
-   <script>
-    function startCountdown() {
+      </li>
+     </ul>
+     <p class="mb-0 text-body-secondary text-center text-lg-start">
+      Roxiestreams © 2024
+     </p>
+    </footer>
+    <script src="js/bootstrap.bundle.min.js">
+    </script>
+    <script>
+     function startCountdown() {
             var countdownElements = document.querySelectorAll('.countdown-timer');
 
             countdownElements.forEach(function(element) {
@@ -293,7 +397,8 @@
         }
 
         window.onload = startCountdown;
-   </script>
+    </script>
+   </div>
   </div>
  </body>
 </html>
