--- a/soccer.html
+++ b/soccer.html
@@ -95,12 +95,12 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Netherlands vs Lithuania</a>
-<td>November 17, 2025 11:45 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Japan vs Bolivia</a>
+<td>November 18, 2025 02:45 AM</td>
 <td><span class="countdown-timer" data-end="November 18, 2025 10:45:00" data-start="November 17, 2025 11:45:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Germany vs Slovakia</a>
-<td>November 17, 2025 11:45 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Cyprus vs Estonia</a>
+<td>November 18, 2025 09:00 AM</td>
 <td><span class="countdown-timer" data-end="November 18, 2025 10:45:00" data-start="November 17, 2025 11:45:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-3">Malta vs Poland</a>
