--- a/soccer.html
+++ b/soccer.html
@@ -103,11 +103,35 @@
 <td>November 18, 2025 09:00 AM</td>
 <td><span class="countdown-timer" data-end="November 18, 2025 10:45:00" data-start="November 17, 2025 11:45:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Malta vs Poland</a>
-<td>November 17, 2025 12:00 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Chile vs Peru</a>
+<td>November 18, 2025 09:00 AM</td>
 <td><span class="countdown-timer" data-end="November 18, 2025 11:00:00" data-start="November 17, 2025 12:00:00"></span></td>
 <tr>
-</tr></td></tr></td></tr></td></tr></tbody></table>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Brazil vs Tunisia</a>
+<td>November 18, 2025 11:30 AM</td>
+<td><span class="countdown-timer" data-end="November 18, 2025 11:00:00" data-start="November 17, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Brazil vs Tunisia</a>
+<td>November 18, 2025 11:30 AM</td>
+<td><span class="countdown-timer" data-end="November 18, 2025 11:00:00" data-start="November 17, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Scotland vs Denmark</a>
+<td>November 18, 2025 11:45 AM</td>
+<td><span class="countdown-timer" data-end="November 18, 2025 11:00:00" data-start="November 17, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-6">Spain vs Turkey</a>
+<td>November 18, 2025 11:45 AM</td>
+<td><span class="countdown-timer" data-end="November 18, 2025 11:00:00" data-start="November 17, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Sweden vs Slovenia</a>
+<td>November 18, 2025 11:45 AM</td>
+<td><span class="countdown-timer" data-end="November 18, 2025 11:00:00" data-start="November 17, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-8">Canada vs Venezuela</a>
+<td>November 18, 2025 11:45 AM</td>
+<td><span class="countdown-timer" data-end="November 18, 2025 11:00:00" data-start="November 17, 2025 12:00:00"></span></td>
+<tr>
+</tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
