--- a/soccer.html
+++ b/soccer.html
@@ -133,25 +133,25 @@
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-9">USA vs Uruguay</a>
 <td>November 18, 2025 16:00 PM</td>
-<td><span class="countdown-timer" data-end="November 19, 2025 10:45:00" data-start="November 18, 2025 11:45:00"></span></td>
+<td><span class="countdown-timer" data-end="November 19, 2025 15:00:00" data-start="November 18, 2025 16:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-10">Colombia vs Australia</a>
 <td>November 18, 2025 16:00 PM</td>
-<td><span class="countdown-timer" data-end="November 19, 2025 10:45:00" data-start="November 18, 2025 11:45:00"></span></td>
+<td><span class="countdown-timer" data-end="November 19, 2025 15:00:00" data-start="November 18, 2025 16:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-13">Panama vs El Salvador</a>
 <td>November 18, 2025 17:00 PM</td>
-<td><span class="countdown-timer" data-end="November 19, 2025 10:45:00" data-start="November 18, 2025 11:45:00"></span></td>
+<td><span class="countdown-timer" data-end="November 19, 2025 16:00:00" data-start="November 18, 2025 17:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-11">Ecuador vs New Zealand</a>
 <td>November 18, 2025 17:30 PM</td>
-<td><span class="countdown-timer" data-end="November 19, 2025 10:45:00" data-start="November 18, 2025 11:45:00"></span></td>
+<td><span class="countdown-timer" data-end="November 19, 2025 16:30:00" data-start="November 18, 2025 17:30:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-12">Mexico vs Paraguay</a>
 <td>November 18, 2025 17:30 PM</td>
-<td><span class="countdown-timer" data-end="November 19, 2025 10:45:00" data-start="November 18, 2025 11:45:00"></span></td>
+<td><span class="countdown-timer" data-end="November 19, 2025 16:30:00" data-start="November 18, 2025 17:30:00"></span></td>
 <tr>
-</tbody></table>
+</tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
