--- a/nba-streams-5.html
+++ b/nba-streams-5.html
@@ -98,7 +98,7 @@
             <div id="playerContainer"></div>
             <div class="streamchanger">
                 <button class="streambutton" onclick="showPlayer('clappr', 'https://again.009292.xyz/nba.m3u8')">Stream 1</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://again.009292.xyz/lakers.m3u8')">Stream 1</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://again.009292.xyz/lakers.m3u8')">Stream 2</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
@@ -133,7 +133,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://again.009292.xyz/nba5.m3u8');
+            showPlayer('clappr', 'https://again.009292.xyz/nba.m3u8');
         };
     </script>
     <script>
