--- a/nba.html
+++ b/nba.html
@@ -118,7 +118,7 @@
   <div class="container container-fluid pt-2 text-white">
    <div class="mt-5">
     <h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">
-     Upcoming Soccer Events
+     Upcoming NBA Events
     </h2>
     <table id="eventsTable">
      <thead>
@@ -216,6 +216,152 @@
        </td>
        <td>
         <span class="countdown-timer" data-end="November 19, 2025 8:00 PM:00" data-start="November 18, 2025 8:00 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
+    <h2>
+     NBA Schedule for November 19, 2025
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Houston Rockets vs Cleveland Cavaliers
+        </a>
+       </td>
+       <td>
+        November 19, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 20, 2025 4:00 PM:00" data-start="November 19, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Charlotte Hornets vs Indiana Pacers
+        </a>
+       </td>
+       <td>
+        November 19, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 20, 2025 4:00 PM:00" data-start="November 19, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Toronto Raptors vs Philadelphia 76ers
+        </a>
+       </td>
+       <td>
+        November 19, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 20, 2025 4:00 PM:00" data-start="November 19, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Golden State Warriors vs Miami Heat
+        </a>
+       </td>
+       <td>
+        November 19, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 20, 2025 4:30 PM:00" data-start="November 19, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Washington Wizards vs Minnesota Timberwolves
+        </a>
+       </td>
+       <td>
+        November 19, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 20, 2025 5:00 PM:00" data-start="November 19, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         Denver Nuggets vs New Orleans Pelicans
+        </a>
+       </td>
+       <td>
+        November 19, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 20, 2025 5:00 PM:00" data-start="November 19, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-7">
+         Sacramento Kings vs Oklahoma City Thunder
+        </a>
+       </td>
+       <td>
+        November 19, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 20, 2025 5:00 PM:00" data-start="November 19, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-8">
+         New York Knicks vs Dallas Mavericks
+        </a>
+       </td>
+       <td>
+        November 19, 2025 6:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 20, 2025 6:30 PM:00" data-start="November 19, 2025 6:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-9">
+         Chicago Bulls vs Portland Trail Blazers
+        </a>
+       </td>
+       <td>
+        November 19, 2025 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 20, 2025 7:00 PM:00" data-start="November 19, 2025 7:00 PM:00">
         </span>
        </td>
       </tr>
