--- a/fighting.html
+++ b/fighting.html
@@ -96,9 +96,9 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/wwe-streams">WWE RAW</a></td>
-<td>November 17, 2025 17:00 PM</td>
-<td><span class="countdown-timer" data-end="November 31, 2025 23:59:00" data-start="November 17, 2025 17:00:00"></span></td>
+<td><a href="https://roxiestreams.live/wwe-streams">WWE NXR</a></td>
+<td>November 18, 2025 17:00 PM</td>
+<td><span class="countdown-timer" data-end="November 31, 2025 23:59:00" data-start="November 18, 2025 17:00:00"></span></td>
 </tr>
 </tbody>
 </table>
