--- a/soccer.html
+++ b/soccer.html
@@ -95,62 +95,27 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Japan vs Bolivia</a>
-<td>November 18, 2025 02:45 AM</td>
-<td><span class="countdown-timer" data-end="November 19, 2025 01:45:00" data-start="November 18, 2025 02:45:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Palmeiras vs Vitória</a>
+<td>November 19, 2025 14:30 PM</td>
+<td><span class="countdown-timer" data-end="November 20, 2025 13:30:00" data-start="November 19, 2025 14:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Cyprus vs Estonia</a>
-<td>November 18, 2025 09:00 AM</td>
-<td><span class="countdown-timer" data-end="November 19, 2025 08:00:00" data-start="November 18, 2025 09:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Fluminense vs Flamengo</a>
+<td>November 19, 2025 16:30 PM</td>
+<td><span class="countdown-timer" data-end="November 20, 2025 15:30:00" data-start="November 19, 2025 16:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Chile vs Peru</a>
-<td>November 18, 2025 09:00 AM</td>
-<td><span class="countdown-timer" data-end="November 19, 2025 08:00:00" data-start="November 18, 2025 09:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Grêmio vs Vasco Da Gama</a>
+<td>November 19, 2025 16:30 PM</td>
+<td><span class="countdown-timer" data-end="November 20, 2025 15:30:00" data-start="November 19, 2025 16:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Brazil vs Tunisia</a>
-<td>November 18, 2025 11:30 AM</td>
-<td><span class="countdown-timer" data-end="November 19, 2025 10:30:00" data-start="November 18, 2025 11:30:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Santos vs Mirassol</a>
+<td>November 19, 2025 16:30 PM</td>
+<td><span class="countdown-timer" data-end="November 20, 2025 15:30:00" data-start="November 19, 2025 16:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Brazil vs Tunisia</a>
-<td>November 18, 2025 11:30 AM</td>
-<td><span class="countdown-timer" data-end="November 19, 2025 10:30:00" data-start="November 18, 2025 11:30:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Pachuca vs Pumas UNAM</a>
+<td>November 19, 2025 17:00 PM</td>
+<td><span class="countdown-timer" data-end="November 20, 2025 16:00:00" data-start="November 19, 2025 17:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Scotland vs Denmark</a>
-<td>November 18, 2025 11:45 AM</td>
-<td><span class="countdown-timer" data-end="November 19, 2025 10:45:00" data-start="November 18, 2025 11:45:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">Spain vs Turkey</a>
-<td>November 18, 2025 11:45 AM</td>
-<td><span class="countdown-timer" data-end="November 19, 2025 10:45:00" data-start="November 18, 2025 11:45:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-7">Sweden vs Slovenia</a>
-<td>November 18, 2025 11:45 AM</td>
-<td><span class="countdown-timer" data-end="November 19, 2025 10:45:00" data-start="November 18, 2025 11:45:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-8">Canada vs Venezuela</a>
-<td>November 18, 2025 11:45 AM</td>
-<td><span class="countdown-timer" data-end="November 19, 2025 10:45:00" data-start="November 18, 2025 11:45:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-9">USA vs Uruguay</a>
-<td>November 18, 2025 16:00 PM</td>
-<td><span class="countdown-timer" data-end="November 19, 2025 15:00:00" data-start="November 18, 2025 16:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-10">Colombia vs Australia</a>
-<td>November 18, 2025 16:00 PM</td>
-<td><span class="countdown-timer" data-end="November 19, 2025 15:00:00" data-start="November 18, 2025 16:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-13">Panama vs El Salvador</a>
-<td>November 18, 2025 17:00 PM</td>
-<td><span class="countdown-timer" data-end="November 19, 2025 16:00:00" data-start="November 18, 2025 17:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-11">Ecuador vs New Zealand</a>
-<td>November 18, 2025 17:30 PM</td>
-<td><span class="countdown-timer" data-end="November 19, 2025 16:30:00" data-start="November 18, 2025 17:30:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-12">Mexico vs Paraguay</a>
-<td>November 18, 2025 17:30 PM</td>
-<td><span class="countdown-timer" data-end="November 19, 2025 16:30:00" data-start="November 18, 2025 17:30:00"></span></td>
-<tr></tbody></table>
+</tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
