--- a/nfl.html
+++ b/nfl.html
@@ -138,14 +138,14 @@
      <tr>
       <td>
        <a href="https://roxiestreams.live/nfl-streams-1">
-        Dallas Cowboys vs Las Vegas Raiders
+        Buffalo Bills vs Houston Texans
        </a>
       </td>
       <td>
-       November 17, 2025 5:15 PM
+       November 19, 2025 5:15 PM
       </td>
       <td>
-       <span class="countdown-timer" data-end="November 18, 2025 5:15 PM:00" data-start="November 17, 2025 5:15 PM:00">
+       <span class="countdown-timer" data-end="November 21, 2025 5:15 PM:00" data-start="November 19, 2025 5:15 PM:00">
        </span>
       </td>
      </tr>
