--- a/motorsports.html
+++ b/motorsports.html
@@ -96,9 +96,34 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/motogp">MotoGP - Pre-Season Testing</a></td>
-<td>November 18, 2025 01:00 AM</td>
-<td><span class="countdown-timer" data-end="November 30, 2025 23:00:00" data-start="November 18, 2025 01:30:00"></span>
+<td><a href="https://roxiestreams.live/f1-streams">Formula 1 - Free Practice</a></td>
+<td>November 20, 2025 16:30 PM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 23:00:00" data-start="November 20, 2025 16:30:00"></span>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/f1-streams">Formula 1 - Free Practice</a></td>
+<td>November 20, 2025 20:00 PM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 23:00:00" data-start="November 20, 2025 20:30:00"></span>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/f1-streams">F1 Academy - Qualifying</a></td>
+<td>November 20, 2025 21:30 PM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 23:00:00" data-start="November 20, 2025 21:30:00"></span>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/f1-streams">Formula 1 - Free Practice</a></td>
+<td>November 21, 2025 16:30 PM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 23:00:00" data-start="November 21, 2025 16:30:00"></span>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/f1-streams">F1 Academy - Race</a></td>
+<td>November 21, 2025 18:15 PM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 23:00:00" data-start="November 21, 2025 18:15:00"></span>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/f1-streams">Formula 1 - Free Practice</a></td>
+<td>November 21, 2025 16:30 PM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 23:00:00" data-start="November 21, 2025 16:30:00"></span>
 </tr>
 <tr>
 </tr></tbody>
