--- a/nba.html
+++ b/nba.html
@@ -138,126 +138,56 @@
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-1">
-         Houston Rockets vs Cleveland Cavaliers
+         Los Angeles Clippers vs Orlando Magic
         </a>
        </td>
        <td>
-        November 19, 2025 4:00 PM
+        November 20, 2025 4:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="November 20, 2025 4:00 PM:00" data-start="November 19, 2025 4:00 PM:00">
+        <span class="countdown-timer" data-end="November 21, 2025 4:00 PM:00" data-start="November 20, 2025 4:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-2">
-         Charlotte Hornets vs Indiana Pacers
+         Sacramento Kings vs Memphis Grizzlies
         </a>
        </td>
        <td>
-        November 19, 2025 4:00 PM
+        November 20, 2025 5:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="November 20, 2025 4:00 PM:00" data-start="November 19, 2025 4:00 PM:00">
+        <span class="countdown-timer" data-end="November 21, 2025 5:00 PM:00" data-start="November 20, 2025 5:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-3">
-         Toronto Raptors vs Philadelphia 76ers
+         Philadelphia 76ers vs Milwaukee Bucks
         </a>
        </td>
        <td>
-        November 19, 2025 4:00 PM
+        November 20, 2025 5:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="November 20, 2025 4:00 PM:00" data-start="November 19, 2025 4:00 PM:00">
+        <span class="countdown-timer" data-end="November 21, 2025 5:00 PM:00" data-start="November 20, 2025 5:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-4">
-         Golden State Warriors vs Miami Heat
+         Atlanta Hawks vs San Antonio Spurs
         </a>
        </td>
        <td>
-        November 19, 2025 4:30 PM
+        November 20, 2025 5:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="November 20, 2025 4:30 PM:00" data-start="November 19, 2025 4:30 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-5">
-         Washington Wizards vs Minnesota Timberwolves
-        </a>
-       </td>
-       <td>
-        November 19, 2025 5:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="November 20, 2025 5:00 PM:00" data-start="November 19, 2025 5:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-6">
-         Denver Nuggets vs New Orleans Pelicans
-        </a>
-       </td>
-       <td>
-        November 19, 2025 5:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="November 20, 2025 5:00 PM:00" data-start="November 19, 2025 5:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-7">
-         Sacramento Kings vs Oklahoma City Thunder
-        </a>
-       </td>
-       <td>
-        November 19, 2025 5:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="November 20, 2025 5:00 PM:00" data-start="November 19, 2025 5:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-8">
-         New York Knicks vs Dallas Mavericks
-        </a>
-       </td>
-       <td>
-        November 19, 2025 6:30 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="November 20, 2025 6:30 PM:00" data-start="November 19, 2025 6:30 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-9">
-         Chicago Bulls vs Portland Trail Blazers
-        </a>
-       </td>
-       <td>
-        November 19, 2025 7:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="November 20, 2025 7:00 PM:00" data-start="November 19, 2025 7:00 PM:00">
+        <span class="countdown-timer" data-end="November 21, 2025 5:00 PM:00" data-start="November 20, 2025 5:00 PM:00">
         </span>
        </td>
       </tr>
