--- a/soccer.html
+++ b/soccer.html
@@ -95,23 +95,31 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Palmeiras vs Vitória</a>
-<td>November 19, 2025 14:30 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Corinthians vs São Paulo</a>
+<td>November 20, 2025 14:30 PM</td>
 <td><span class="countdown-timer" data-end="November 20, 2025 13:30:00" data-start="November 19, 2025 14:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Fluminense vs Flamengo</a>
-<td>November 19, 2025 16:30 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Ceará vs Internacional</a>
+<td>November 20, 2025 16:30 PM</td>
 <td><span class="countdown-timer" data-end="November 20, 2025 15:30:00" data-start="November 19, 2025 16:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Grêmio vs Vasco Da Gama</a>
-<td>November 19, 2025 16:30 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Mainz 05 vs Hoffenheim</a>
+<td>November 21, 2025 11:30 AM</td>
 <td><span class="countdown-timer" data-end="November 20, 2025 15:30:00" data-start="November 19, 2025 16:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Pachuca vs Pumas UNAM</a>
-<td>November 19, 2025 17:00 PM</td>
-<td><span class="countdown-timer" data-end="November 20, 2025 16:00:00" data-start="November 19, 2025 17:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Nice vs Marseille</a>
+<td>November 21, 2025 11:45 AM</td>
+<td><span class="countdown-timer" data-end="November 20, 2025 15:30:00" data-start="November 19, 2025 16:30:00"></span></td>
 <tr>
-</tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Valencia vs Levante</a>
+<td>November 21, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="November 20, 2025 15:30:00" data-start="November 19, 2025 16:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Atlético CP vs Benfica</a>
+<td>November 21, 2025 12:30 PM</td>
+<td><span class="countdown-timer" data-end="November 20, 2025 15:30:00" data-start="November 19, 2025 16:30:00"></span></td>
+<tr>
+</tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
