--- a/index.html
+++ b/index.html
@@ -119,18 +119,23 @@
             <tbody>
                 <tr>
                     <td><a href="https://roxiestreams.live/soccer">Brasileirão</td>
-                    <td>November 19, 2025 14:30 PM</td>
-                    <td><span class="countdown-timer" data-start="November 19, 2025 14:30:00" data-end="November 30, 2025 23:30:00"></span></td>
+                    <td>November 20, 2025 14:30 PM</td>
+                    <td><span class="countdown-timer" data-start="November 20, 2025 14:30:00" data-end="November 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
                     <td><a href="https://roxiestreams.live/nba">NBA</td>
-                    <td>November 19, 2025 16:00 PM</td>
-                    <td><span class="countdown-timer" data-start="November 19, 2025 16:00:00" data-end="November 30, 2025 23:30:00"></span></td>
+                    <td>November 20, 2025 16:00 PM</td>
+                    <td><span class="countdown-timer" data-start="November 20, 2025 16:00:00" data-end="November 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/aew">AEW</td>
-                    <td>November 19, 2025 17:00 PM</td>
-                    <td><span class="countdown-timer" data-start="November 19, 2025 17:00:00" data-end="November 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/f1-streams">Formula 1</td>
+                    <td>November 20, 2025 16:30 PM</td>
+                    <td><span class="countdown-timer" data-start="November 20, 2025 16:30:00" data-end="November 30, 2025 23:30:00"></span></td>
+                </tr>
+                <tr>
+                    <td><a href="https://roxiestreams.live/nfl-streams-1">NFL (TNF)</td>
+                    <td>November 20, 2025 17:15 PM</td>
+                    <td><span class="countdown-timer" data-start="November 19, 2025 17:15:00" data-end="November 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
             </tbody>
