--- a/nba.html
+++ b/nba.html
@@ -138,56 +138,126 @@
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-1">
-         Los Angeles Clippers vs Orlando Magic
+         Indiana Pacers vs Cleveland Cavaliers
         </a>
        </td>
        <td>
-        November 20, 2025 4:00 PM
+        November 21, 2025 4:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="November 21, 2025 4:00 PM:00" data-start="November 20, 2025 4:00 PM:00">
+        <span class="countdown-timer" data-end="November 22, 2025 4:00 PM:00" data-start="November 21, 2025 4:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-2">
-         Sacramento Kings vs Memphis Grizzlies
+         Brooklyn Nets vs Boston Celtics
         </a>
        </td>
        <td>
-        November 20, 2025 5:00 PM
+        November 21, 2025 4:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="November 21, 2025 5:00 PM:00" data-start="November 20, 2025 5:00 PM:00">
+        <span class="countdown-timer" data-end="November 22, 2025 4:30 PM:00" data-start="November 21, 2025 4:30 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-3">
-         Philadelphia 76ers vs Milwaukee Bucks
+         Washington Wizards vs Toronto Raptors
         </a>
        </td>
        <td>
-        November 20, 2025 5:00 PM
+        November 21, 2025 4:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="November 21, 2025 5:00 PM:00" data-start="November 20, 2025 5:00 PM:00">
+        <span class="countdown-timer" data-end="November 22, 2025 4:30 PM:00" data-start="November 21, 2025 4:30 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-4">
-         Atlanta Hawks vs San Antonio Spurs
+         Miami Heat vs Chicago Bulls
         </a>
        </td>
        <td>
-        November 20, 2025 5:00 PM
+        November 21, 2025 5:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="November 21, 2025 5:00 PM:00" data-start="November 20, 2025 5:00 PM:00">
+        <span class="countdown-timer" data-end="November 22, 2025 5:00 PM:00" data-start="November 21, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         New Orleans Pelicans vs Dallas Mavericks
+        </a>
+       </td>
+       <td>
+        November 21, 2025 5:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 22, 2025 5:30 PM:00" data-start="November 21, 2025 5:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         Minnesota Timberwolves vs Phoenix Suns
+        </a>
+       </td>
+       <td>
+        November 21, 2025 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 22, 2025 6:00 PM:00" data-start="November 21, 2025 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-7">
+         Denver Nuggets vs Houston Rockets
+        </a>
+       </td>
+       <td>
+        November 21, 2025 6:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 22, 2025 6:30 PM:00" data-start="November 21, 2025 6:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-8">
+         Oklahoma City Thunder vs Utah Jazz
+        </a>
+       </td>
+       <td>
+        November 21, 2025 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 22, 2025 7:00 PM:00" data-start="November 21, 2025 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-9">
+         Portland Trail Blazers vs Golden State Warriors
+        </a>
+       </td>
+       <td>
+        November 21, 2025 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 22, 2025 7:00 PM:00" data-start="November 21, 2025 7:00 PM:00">
         </span>
        </td>
       </tr>
