--- a/nfl.html
+++ b/nfl.html
@@ -118,7 +118,7 @@
   <div class="container container-fluid pt-2 text-white">
    <div class="mt-5">
     <h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">
-     Upcoming NFL Events
+     Upcoming NCAA Events
     </h2>
    <table id="eventsTable">
     <thead>
@@ -137,15 +137,29 @@
     <tbody>
      <tr>
       <td>
-       <a href="https://roxiestreams.live/nfl-streams-1">
-        Buffalo Bills vs Houston Texans
+       <a href="https://roxiestreams.live/ncaa-streams-1">
+        Florida State vs NC State
        </a>
       </td>
       <td>
-       November 20, 2025 5:15 PM
+       November 21, 2025 5:00 PM
       </td>
       <td>
-       <span class="countdown-timer" data-end="November 21, 2025 5:15 PM:00" data-start="November 20, 2025 5:15 PM:00">
+       <span class="countdown-timer" data-end="November 22, 2025 5:15 PM:00" data-start="November 21, 2025 5:00 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/ncaa-streams-2">
+        Florida State vs NC State
+       </a>
+      </td>
+      <td>
+       November 21, 2025 19:30 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 22, 2025 5:15 PM:00" data-start="November 21, 2025 19:30 PM:00">
        </span>
       </td>
      </tr>
