--- a/nfl.html
+++ b/nfl.html
@@ -152,7 +152,7 @@
      <tr>
       <td>
        <a href="https://roxiestreams.live/ncaa-streams-2">
-        Florida State vs NC State
+        Hawaii vs UNLV
        </a>
       </td>
       <td>
